# edge2torch

./: .coverage  .gitignore  CHANGELOG.md  CITATION.cff  CONTEXT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/api/: index.html
0.1.0/backends/: index.html
0.1.0/changelog/: index.html
0.1.0/citing/: index.html
0.1.0/edge-weight-metadata/: index.html
0.1.0/feedback/: index.html
0.1.0/feedforward-skip-edges/: index.html
0.1.0/getting-started/: index.html
0.1.0/installation/: index.html
0.1.0/search/: search_index.json
0.1.0rc4/: 404.html  index.html  sitemap.xml
0.1.0rc4/api/: index.html
0.1.0rc4/backends/: index.html
0.1.0rc4/changelog/: index.html
0.1.0rc4/citing/: index.html
0.1.0rc4/edge-weight-metadata/: index.html
0.1.0rc4/feedback/: index.html
0.1.0rc4/feedforward-skip-edges/: index.html
0.1.0rc4/getting-started/: index.html
0.1.0rc4/installation/: index.html
0.1.0rc4/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/: index.html
0.2.0/backends/: index.html
0.2.0/changelog/: index.html
0.2.0/citing/: index.html
0.2.0/edge-weight-metadata/: index.html
0.2.0/feedback/: index.html
0.2.0/feedforward-skip-edges/: index.html
0.2.0/getting-started/: index.html
0.2.0/graphnn-example/: index.html
0.2.0/installation/: index.html
0.2.0/recurrent-example/: index.html
0.2.0/scope/: index.html
0.2.0/search/: search_index.json
dev/: build_pypi_release.sh  dry_run_testpypi_release.sh  pypi_release.sh
docs/: api.md  backends.md  citing.md  design.md  edge-weight-metadata.ipynb  feedback.md  feedforward-skip-edges.ipynb  getting-started.ipynb  graphnn-example.ipynb  index.md  installation.md  interpretation.md  recurrent-example.ipynb  scope.md  state-update-example.ipynb
src/edge2torch/: __init__.py  align_features_to_input_nodes.py  compile_graph.py  customize_model.py  graph_topology.py  interpret_model.py
src/edge2torch/compile/: artifact.py  compiler.py  execution_plan.py  feedforward.py  graphnn.py  input_validation.py  interpretation_metadata.py  recurrent.py  state_update.py
src/edge2torch/customize/: input_validation.py
src/edge2torch/graph/: io.py  schema.py  validate.py
src/edge2torch/interpret/: captum_adapter.py  captum_classes.py  feature_attribution.py  feedforward_node_attribution.py  input_validation.py  method_registry.py  prepare_input.py  site_node_attribution.py
src/edge2torch/nn/: blocks.py  customized_model.py  interpretation_sites.py  masked_linear.py  model.py  step_block.py
src/edge2torch/utils/: constants.py  errors.py  feature_labels.py
src/kpnn/: __init__.py  align_features_to_input_nodes.py  compile_graph.py  customize_model.py  interpret_model.py
src/kpnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/kpnn/compile/: artifact.py  compiler.py  execution_plan.py  feedforward.py  graphnn.py  input_validation.py  recurrent.py
src/kpnn/customize/: input_validation.py
src/kpnn/graph/: io.py  schema.py  validate.py
src/kpnn/interpret/: captum_adapter.py  feature_attribution.py  feedforward_node_attribution.py  input_validation.py  method_registry.py  prepare_input.py
src/kpnn/nn/: blocks.py  customized_model.py  masked_linear.py  model.py
src/kpnn/utils/: constants.py  errors.py  input_validation.py
tests/: test_api_compile_graph.py  test_api_compile_graph_recurrent.py  test_api_interpret_model.py  test_model_pytorch_integration.py  test_model_pytorch_integration_graphnn.py  test_model_pytorch_integration_recurrent.py
tests/align_features_to_input_nodes/: test_api_align_features_to_input_nodes.py
tests/api/: README.txt  test_graph_topology.py  test_public_api.py
tests/api/align_features_to_input_nodes/: test_api_align_features_to_input_nodes.py
tests/api/compile_graph/: test_absent_edge_influence.py  test_api_compile_graph.py  test_api_compile_graph_graphnn.py  test_api_compile_graph_recurrent.py  test_api_compile_graph_state_update.py  test_architecture_fixtures.py  test_bias_option.py  test_feedforward_edge_metadata.py  test_graphnn_edge_metadata.py  test_input_validation.py  test_model_pytorch_integration.py  test_model_pytorch_integration_recurrent.py  test_model_pytorch_integration_state_update.py  test_recurrent_edge_metadata.py  test_state_update_edge_metadata.py  test_steps_option.py
tests/api/customize_model/: test_model_customization.py
tests/api/interpret_model/: test_api_interpret_model.py  test_interpret_architecture_fixtures.py
tests/compile_graph/: test_api_compile_graph.py  test_api_compile_graph_graphnn.py  test_api_compile_graph_recurrent.py  test_input_validation.py  test_model_pytorch_integration.py  test_model_pytorch_integration_graphnn.py  test_model_pytorch_integration_recurrent.py
tests/customize_model/: test_model_customization.py
tests/fixtures/edgelists/: feedforward_multilayer.csv  feedforward_skip_edges.csv  graphnn_cycle.csv  state_update_cycle.csv
tests/integration/: test_interpretation_sanity_backends.py  test_real_task_backends.py
tests/interpret_model/: test_api_interpret_model.py
tests/module/: README.txt
tests/module/compile/: test_execution_plan_internal.py  test_execution_plan_state_update.py  test_feedforward_metadata_plan.py  test_interpretation_metadata_internal.py
tests/module/customize/: test_input_validation_internal.py
tests/module/graph/: test_validate_internal.py
tests/module/interpret/: test_feature_attribution_internal.py  test_feedforward_node_attribution_internal.py  test_interpret_model_input_validation.py  test_site_node_attribution_internal.py
tests/module/nn/: test_constrained_masked_linear.py  (+4 more)
