[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "edge2torch"
version = "0.1.0rc1"
description = "Build sparse PyTorch neural networks from edge lists of named nodes, with optional feature- and node-level attribution."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Thomas Rauter" }
]
dependencies = [
    "pandas",
    "torch",
    "captum",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://Thomas-Rauter.github.io/edge2torch/"
Documentation = "https://Thomas-Rauter.github.io/edge2torch/"
Repository = "https://github.com/Thomas-Rauter/edge2torch"
Issues = "https://github.com/Thomas-Rauter/edge2torch/issues"

[project.optional-dependencies]
bio = [
    "anndata",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
    "anndata",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "pymdown-extensions",
    "nbconvert",
    "ipykernel",
    "ipywidgets",
    "graphviz",
    "IPython",
    "seaborn",
    "black",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
