[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "edge2torch"
version = "0.2.0"
description = "Build sparsely connected PyTorch neural networks from prior-knowledge graphs, with optional feature- and node-level attribution."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Thomas Rauter" }
]
dependencies = [
    "torch>=2.1,<3",
    "pandas>=2.0,<3",
    "numpy>=1.24,<3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://Thomas-Rauter.github.io/edge2torch/"
Documentation = "https://Thomas-Rauter.github.io/edge2torch/"
Repository = "https://github.com/Thomas-Rauter/edge2torch"
Issues = "https://github.com/Thomas-Rauter/edge2torch/issues"

[project.optional-dependencies]
all = [
    "captum>=0.7,<1",
    "anndata>=0.10,<1",
]
interpret = [
    "captum>=0.7,<1",
]
anndata = [
    "anndata>=0.10,<1",
]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "pandas-stubs>=2.3.3,<2.4",
    "build",
    "captum>=0.7,<1",
    "anndata>=0.10,<1",
    "scikit-learn",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "mkdocs-include-markdown-plugin",
    "pymdown-extensions",
    "nbconvert",
    "ipykernel",
    "ipywidgets",
    "graphviz",
    "IPython",
    "seaborn",
    "black",
    "captum>=0.7,<1",
    "anndata>=0.10,<1",
    "mike>=2,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
markers = [
    "integration: tests that train models or use real datasets",
]
